# utf4cpp

./: CMakeLists.txt  README.txt
automatas/: CMakeLists.txt  dfa.cpp  dfa.h  dfa_test.cpp  dfa_test.h  main.cpp  nfa.cpp  nfa.h  nfa_test.cpp  nfa_test.h  reg_exp.cpp  reg_exp.h  reg_exp_impl.h  reg_exp_test.cpp  reg_exp_test.h  test_util.cpp  test_util.h
utf4cpp/: CMakeLists.txt  iterators.h  segmentation.h  traits.h  unicpp.h
utf4cpp/cdb/: grapheme_break.cpp  grapheme_break.h  grapheme_break_binary_auto.h  grapheme_break_binary_auto_impl.h  grapheme_break_table_2levels_auto.h  grapheme_break_table_2levels_auto_impl.h  grapheme_break_table_3levels_auto.h  grapheme_break_table_3levels_auto_impl.h  line_break.cpp  line_break.h  line_break_binary_auto.h  line_break_binary_auto_impl.h  line_break_table_2levels_auto.h  line_break_table_2levels_auto_impl.h  line_break_table_data.h  sentence_break.cpp  sentence_break.h  sentence_break_binary_auto.h  sentence_break_binary_auto_impl.h  sentence_break_table_2levels_auto.h  sentence_break_table_2levels_auto_impl.h  sentence_break_table_3levels_auto.h  sentence_break_table_3levels_auto_impl.h  word_break.cpp  word_break.h  word_break_binary_auto.h  word_break_binary_auto_impl.h  word_break_table_2levels_auto.h  word_break_table_2levels_auto_impl.h  word_break_table_3levels_auto.h  word_break_table_3levels_auto_impl.h
utf4cpp/dfa/: grapheme_break_dfa.h  sentence_break_dfa.h  word_break_dfa.h
utf4cpp_test/: CMakeLists.txt  cdb_test.cpp  cdb_test.h  const_iterator_test.cpp  const_iterator_test.h  input_output_test.cpp  input_output_test.h  main.cpp  segmentation_test.cpp  segmentation_test.h  test.h  test_data.cpp  test_data.h  test_utf.cpp  test_utf.h  time.h  util.cpp  util.h
utils/: CMakeLists.txt  dfautil.cpp  dfautil.h  dfautil_v6_3_0.cpp  dfautil_v6_3_0.h  main.cpp
utils/cdb/: binary_generator.cpp  binary_generator.h  common_generator.cpp  common_generator.h  info_parser.cpp  info_parser.h  table_generator.cpp  table_generator.h  util.cpp  util.h
